
[project]
name = "xontrib-chatgpt"
version = "0.1.5"
license = {file = "LICENSE"}
description = "Gives the ability to use ChatGPT directly from the command line"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
]
requires-python = ">=3.9"
dependencies = ["xonsh>=0.12.5", "prompt_toolkit>=3.0.36", "openai>=0.28.0", "pygments>=2.16.1", "tiktoken>=0.5.1"]
authors = [
    { name = "Justin Pallansch", email = "pallanschja@gmail.com" },
]
[project.readme]
file = "README.md"
content-type = "text/markdown"



# [project.entry-points."xonsh.xontribs"]
# "chatgpt" = "xontrib.chatgpt"



[project.urls]

Homepage = "https://github.com/jpal91/xontrib-chatgpt"
Documentation = "https://github.com/jpal91/xontrib-chatgpt/blob/master/README.md"
Code = "https://github.com/jpal91/xontrib-chatgpt"
"Issue tracker" = "https://github.com/jpal91/xontrib-chatgpt/issues"




[project.optional-dependencies]
dev = ["pytest>=7.0"]



[build-system]
requires = [
    "setuptools>=62",
    "wheel",               # for bdist package distribution
]
build-backend = "setuptools.build_meta"
[tool.setuptools]
packages=["xontrib", "xontrib_chatgpt"]
package-dir = {xontrib = "xontrib", xontrib_chatgpt = "xontrib_chatgpt"}


platforms = ["any"]
include-package-data = false
[tool.setuptools.package-data]
    


[tool.black]
include = '\.pyi?$'
force-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.vscode
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | disk-cache.sqlite3
)/
'''

[tool.ruff]
select = [
    "E",
    "F",
    "B", # flake8-bugbear
    "I", # isort
    "UP", # pyupgrade
    "SIM", # simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff specific rules
]
